affix footer to bottom - covering content (bug)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,9 +17,9 @@ html {
   padding: 0;
   box-sizing: border-box; }
 
-html,
-body {
-  height: 100%; }
+#root {
+  height: 100%;
+  position: relative; }
 
 html {
   font-size: 62.5%; }
@@ -34,8 +34,7 @@ html {
 
 body {
   box-sizing: border-box;
-  background-color: #e9e9e9;
-  margin-bottom: 20rem; }
+  background-color: #e9e9e9; }
 
 body {
   font-family: 'Raleway', sans-serif; }
@@ -171,9 +170,7 @@ header {
   height: 20rem;
   background: #4a919e;
   position: absolute;
-  left: 0;
   bottom: 0;
-  right: 0;
   width: 100%; }
 
 .row {
@@ -334,6 +331,13 @@ header {
       .navbar__link:hover, .navbar__link:active {
         border: none;
         background-color: rgba(33, 46, 83, 0.2); } }
+
+#content-wrap {
+  min-height: 100vh;
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 20rem; }
 
 .section-about {
   height: 70rem;
