--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,9 +7,9 @@
   box-sizing: border-box;
 }
 
-html,
-body {
+#root {
   height: 100%;
+  position: relative;
 }
 
 //Default font-size of 10px (10px/16px)
@@ -31,6 +31,7 @@ html {
 body {
   box-sizing: border-box;
   background-color: $color-grey-light;
-  margin-bottom: $footer-height;
+  // display: flex;
+  // flex-direction: column;
 }
 
