--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,8 +2,6 @@
   height: $footer-height;
   background: $color-blue-light;
   position: absolute;
-  left: 0;
   bottom: 0;
-  right: 0;
   width: 100%;
 }
